--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^4.0.1",
+    "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@hookform/resolvers": "^3.9.0",
     "@shopify/flash-list": "1.7.3",
@@ -53,6 +54,7 @@
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.3",
     "expo-image": "~2.0.5",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
     "expo-router": "~4.0.17",
