--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,9 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.1"
+        ndk {
+          abiFilters "arm64-v8a"//,"x86","arm64-v8a""armeabi-v7a'
+        }
     }
     signingConfigs {
         debug {
