--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eu_cloud",
   "version": "1.0.1",
   "private": true,
-  "main": "expo-router/entry",
+  "main": "node_modules/expo-router/entry",
   "scripts": {
     "start": "cross-env EXPO_NO_DOTENV=1 expo start",
     "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild",
@@ -57,7 +57,7 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
-    "expo-router": "~4.0.17",
+    "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
@@ -71,7 +71,7 @@
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-edge-to-edge": "^1.1.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
