--- a/ios/EUCloudERP.xcodeproj/xcshareddata/xcschemes/EUCloudERP.xcscheme
+++ b/ios/EUCloudERP.xcodeproj/xcshareddata/xcschemes/EUCloudERP.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ObytesApp.app"
-               BlueprintName = "ObytesApp"
-               ReferencedContainer = "container:ObytesApp.xcodeproj">
+               BuildableName = "EUCloudERP.app"
+               BlueprintName = "EUCloudERP"
+               ReferencedContainer = "container:EUCloudERP.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ObytesAppTests.xctest"
-               BlueprintName = "ObytesAppTests"
-               ReferencedContainer = "container:ObytesApp.xcodeproj">
+               BuildableName = "EUCloudERPTests.xctest"
+               BlueprintName = "EUCloudERPTests"
+               ReferencedContainer = "container:EUCloudERP.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -50,16 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ObytesApp.app"
-            BlueprintName = "ObytesApp"
-            ReferencedContainer = "container:ObytesApp.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -67,16 +57,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ObytesApp.app"
-            BlueprintName = "ObytesApp"
-            ReferencedContainer = "container:ObytesApp.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
