--- a/.env.staging
+++ b/.env.staging
@@ -1,4 +1,4 @@
-API_URL=https://dummyjson.com/
+API_URL=http://116.204.98.209:8090/
 
 ## TODO: add the variable to your  CI and remove it from here, not recommended setting sensitive values on your git repo
 SECRET_KEY=my-secret-key
