--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "e2e-test": "maestro test .maestro/ -e APP_ID=com.obytes.development"
   },
   "dependencies": {
+    "@ant-design/icons-react-native": "^2.3.2",
+    "@ant-design/react-native": "^5.4.1",
     "@expo/metro-runtime": "^4.0.1",
     "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^5.0.5",
@@ -77,7 +79,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-controller": "^1.13.2",
     "react-native-mmkv": "~3.1.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.16.7",
     "react-native-restart": "0.0.27",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
