chore: 更新API URL并优化代码
- 将.env文件中的API URL从HTTP更新为HTTPS，确保安全连接
- 在package.json中添加新的启动脚本，支持缓存重置
- 在device.tsx中添加平台检查，仅记录web设备信息

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "node_modules/expo-router/entry",
   "scripts": {
     "start": "cross-env EXPO_NO_DOTENV=1 expo start",
+    "start:reset": "cross-env EXPO_NO_DOTENV=1 expo start --reset-cache",
     "prebuild": "cross-env EXPO_NO_DOTENV=1 pnpm expo prebuild",
     "android": "cross-env EXPO_NO_DOTENV=1 expo run:android",
     "ios": "cross-env EXPO_NO_DOTENV=1 expo run:ios",
