--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eu_cloud",
+  "name": "eucloud",
   "version": "1.0.1",
   "private": true,
   "main": "node_modules/expo-router/entry",
