feat(updates): 升级expo-updates至0.27.4并启用自动更新功能 OTA配置Android和iOS平台的自动更新功能

--- a/eas.json
+++ b/eas.json
@@ -50,7 +50,8 @@
       "env": {
         "APP_ENV": "development",
         "EXPO_NO_DOTENV": "1"
-      }
+      },
+      "channel": "development"
     },
     "simulator": {
       "pnpm": "9.12.3",
@@ -64,7 +65,8 @@
       "env": {
         "APP_ENV": "development",
         "EXPO_NO_DOTENV": "1"
-      }
+      },
+      "channel": "simulator"
     }
   },
   "submit": {
