--- a/ios/EUCloudERP/Supporting/Expo.plist
+++ b/ios/EUCloudERP/Supporting/Expo.plist
@@ -5,8 +5,12 @@
     <key>EXUpdatesCheckOnLaunch</key>
     <string>ALWAYS</string>
     <key>EXUpdatesEnabled</key>
-    <false/>
+    <true/>
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
+    <key>EXUpdatesRuntimeVersion</key>
+    <string>2</string>
+    <key>EXUpdatesURL</key>
+    <string>https://u.expo.dev/9d0f9588-d00f-40cf-a15c-ffd7e8bc7654</string>
   </dict>
 </plist>
