--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.1",
     "react-native": "0.76.9",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^14.0.4",
     "react-native-edge-to-edge": "^1.1.2",
     "react-native-flash-message": "^0.4.2",
