--- a/package.json
+++ b/package.json
@@ -49,11 +49,16 @@
     "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^5.0.5",
     "@hookform/resolvers": "^3.9.0",
+    "@react-native-clipboard/clipboard": "^1.16.2",
+    "@react-native-documents/picker": "^10.1.3",
     "@shopify/flash-list": "1.7.3",
     "@tanstack/react-query": "^5.52.1",
+    "@types/marked": "^5.0.0",
+    "@types/react-native-table-component": "^1.2.8",
     "app-icon-badge": "^0.1.2",
     "axios": "^1.7.5",
-    "expo": "~52.0.35",
+    "css-to-react-native": "^3.2.0",
+    "expo": "~52.0.46",
     "expo-constants": "~17.0.6",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.3",
@@ -61,8 +66,8 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
-    "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.22",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
     "expo-updates": "~0.27.4",
@@ -77,20 +82,37 @@
     "react-i18next": "^15.0.1",
     "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-compressor": "^1.11.0",
     "react-native-device-info": "^14.0.4",
+    "react-native-dialog": "^9.3.0",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-edge-to-edge": "^1.1.2",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-flash-message": "^0.4.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-haptic-feedback": "^2.3.3",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-keyboard-controller": "^1.14.2",
+    "react-native-marked": "^6.0.7",
+    "react-native-math-view": "^3.9.5",
     "react-native-mmkv": "~3.1.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.7",
     "react-native-restart": "0.0.27",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
+    "react-native-share": "^12.0.10",
     "react-native-svg": "~15.8.0",
+    "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.19.13",
     "react-query-kit": "^3.3.0",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwind-variants": "^0.2.1",
+    "trim-newlines": "^5.0.0",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
@@ -106,6 +128,8 @@
     "@types/jest": "^29.5.12",
     "@types/lodash.memoize": "^4.1.9",
     "@types/react": "~18.3.12",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/svg-parser": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "babel-plugin-module-resolver": "^5.0.2",
