--- a/package.json
+++ b/package.json
@@ -63,9 +63,10 @@
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.3",
     "expo-image": "~2.0.5",
-    "expo-linear-gradient": "^14.0.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
+    "expo-modules-core": "~2.2.3",
     "expo-router": "~4.0.21",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -89,22 +90,19 @@
     "react-native-edge-to-edge": "^1.1.2",
     "react-native-file-viewer": "^2.1.5",
     "react-native-flash-message": "^0.4.2",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-gifted-chat": "^2.4.0",
+    "react-native-gifted-chat": "2.4.0",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-picker": "^8.2.1",
     "react-native-image-viewing": "^0.2.2",
-    "react-native-keyboard-controller": "^1.14.2",
+    "react-native-keyboard-controller": "^1.17.3",
     "react-native-marked": "^6.0.7",
-    "react-native-math-view": "^3.9.5",
     "react-native-mmkv": "~3.1.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.7",
     "react-native-restart": "0.0.27",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.4.0",
-    "react-native-share": "^12.0.10",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "~15.8.0",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.19.13",
@@ -120,7 +118,7 @@
     "@babel/core": "^7.26.0",
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
-    "@dev-plugins/react-query": "^0.0.7",
+    "@dev-plugins/react-query": "~0.2.0",
     "@expo/config": "~10.0.3",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react-native": "^12.7.2",
